Update on test codes